tests/init_state/overwrite/overwrite_violations.sim
# Overwrites that are illegal because the prior value is still live
# and cannot be silently dropped.
#
# Overwriting an Init place whose type is not Drop fires
# INIT-OverwriteWithoutDrop because the compiler cannot insert a
# drop — the value must be consumed by the caller first. Overwriting
# a ref-typed field when the reference still carries an unfulfilled
# write obligation fires INIT-RefObligationUnfulfilled instead,
# because the diagnostic describes the obligation contract, not the
# drop semantics.
#
#   fn                                    prior state  type          diag
#   overwrite_init_linear_whole           Init         Linear(Move)  OverwriteWithoutDrop
#   overwrite_init_linear_field           Init         Wrap(Move)    OverwriteWithoutDrop
#   overwrite_ref_field_unfulfilled_oblg  Init         &mut i64      RefObligationUnfulfilled

struct Linear: Move { r: &out i64 }

struct Wrap: Move { r: &out i64 }

struct Container: Move { w1: Wrap  w2: Wrap }

struct RefBox: Move { p: &mut i64 }

extern fn take(l: Linear);
extern fn take_wrap(w: Wrap);
extern fn take_container(c: Container);

# ---------- Init non-Drop whole place: OverwriteWithoutDrop ----------

# `y` is Init (holds `x1`) when `x2` is moved in. Because Linear
# is not Drop, elaboration cannot insert a drop and the overwrite is
# rejected with INIT-OverwriteWithoutDrop.
fn overwrite_init_linear_whole(x1: Linear, x2: Linear) {
  y: Linear;
  entry:
    y = move x1;
    y = move x2;
    call take(move y);
    return
}

# ---------- Init non-Drop field: OverwriteWithoutDrop ----------

# `c.w1` is Init when the second `move w1` arrives. The field type
# Wrap is not Drop, so the overwrite is rejected.
fn overwrite_init_linear_field(w0: Wrap, w1: Wrap) {
  c: Container;
  entry:
    c.w1 = move w0;
    c.w1 = move w1;
    return
}

# ---------- Ref field with unfulfilled write obligation ----------

# `b.p` borrows `x` as `&mut`, creating an obligation that the
# pointee is Init when the reference expires. Moving `b.p.*` out of
# `x` leaves the pointee in the Moved state. Overwriting `b.p` with
# a new reference while the old obligation is unfulfilled fires
# INIT-RefObligationUnfulfilled.
fn overwrite_ref_field_unfulfilled_oblg(x: i64, x2: i64) {
  b: RefBox;
  y: i64;
  entry:
    b.p = &mut x;
    y = move b.p.*;
    b.p = &mut x2;
    return
}

extern fn consume_array(a: [Linear; 3]);

# ---------- Init non-Drop dynamic element: OverwriteWithoutDrop ----------

# Overwriting an element of a linear array via dynamic index without
# dropping it first fires INIT-OverwriteWithoutDrop.
fn overwrite_init_linear_dynamic_index(a: [Linear; 3], i: i64, new_linear: Linear) {
  entry:
    a[copy i] = move new_linear;
    call consume_array(move a);
    return
}

